vpc.tf
# Create the VPC
 resource "aws_vpc" "terraform_generated" {                # Creating VPC here
   cidr_block       = var.terraform_generated_vpc_cidr     # Defining the CIDR block use 10.0.0.0/24 for demo
   instance_tenancy = "default"
   tags = {
    terraform = "true"
    Name = "terraform_generated"
  }
 }
 # Create Internet Gateway and attach it to VPC
 resource "aws_internet_gateway" "IGW" {    # Creating Internet Gateway
    vpc_id =  aws_vpc.terraform_generated.id               # vpc_id will be generated after we create VPC
  tags = {
    terraform = "true"
    Name = "${aws_vpc.terraform_generated.tags.Name}-igw"
  }
 }
 # Create a Public Subnets.
 resource "aws_subnet" "publicsubnets" {    # Creating Public Subnets
   vpc_id =  aws_vpc.terraform_generated.id
   cidr_block = "${var.public_subnets}"        # CIDR block of public subnets
   map_public_ip_on_launch = "true"

 }
 # Create a Private Subnet                   # Creating Private Subnets
 resource "aws_subnet" "privatesubnets" {
    vpc_id =  aws_vpc.terraform_generated.id
    cidr_block = "${var.private_subnets}"          # CIDR block of private subnets

 }
 # Route table for Public Subnet's
 resource "aws_route_table" "PublicRT" {    # Creating RT for Public Subnet
    vpc_id =  aws_vpc.terraform_generated.id
         route {
    cidr_block = "0.0.0.0/0"               # Traffic from Public Subnet reaches Internet via Internet Gateway
    gateway_id = aws_internet_gateway.IGW.id
     }
 }
 # Route table for Private Subnet's
 resource "aws_route_table" "PrivateRT" {    # Creating RT for Private Subnet
   vpc_id = aws_vpc.terraform_generated.id
   route {
   cidr_block = "0.0.0.0/0"             # Traffic from Private Subnet reaches Internet via NAT Gateway 
   nat_gateway_id = aws_nat_gateway.NATgw.id
   }

 }
 # Route table Association with Public Subnet's
 resource "aws_route_table_association" "PublicRTassociation" {
    subnet_id = aws_subnet.publicsubnets.id
    route_table_id = aws_route_table.PublicRT.id
 }
 # Route table Association with Private Subnet's
 resource "aws_route_table_association" "PrivateRTassociation" {
    subnet_id = aws_subnet.privatesubnets.id
    route_table_id = aws_route_table.PrivateRT.id
    }
 resource "aws_eip" "nateIP" {
   vpc   = true
 }
 # Creating the NAT Gateway using subnet_id and allocation_id
 resource "aws_nat_gateway" "NATgw" {
   allocation_id = aws_eip.nateIP.id
   subnet_id = aws_subnet.publicsubnets.id
 }
# Creating Security grouup
resource "aws_security_group" "allow_web_DMZ" {
    name = "allow_web_DMZ"
    description = "Allow inbound traffic from internet"
    vpc_id = aws_vpc.terraform_generated.id
    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 3000
        to_port = 3000
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }


}
